# HomeWorksOTUS

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  _primitives_8cpp.html  _primitives_8cpp__incl.map  _primitives_8cpp__incl.md5  _primitives_8h.html  _primitives_8h__dep__incl.map  _primitives_8h__dep__incl.md5  _primitives_8h__incl.map  _primitives_8h__incl.md5  _primitives_8h_source.html  _shader_8cpp.html  _shader_8cpp__incl.map  _shader_8cpp__incl.md5  _shader_8h.html  _shader_8h__dep__incl.map  _shader_8h__dep__incl.md5  _shader_8h__incl.map  _shader_8h__incl.md5  _shader_8h_source.html  _widgets_8cpp.html  _widgets_8cpp__incl.map  _widgets_8cpp__incl.md5  _widgets_8h.html  _widgets_8h__dep__incl.map  _widgets_8h__dep__incl.md5  _widgets_8h__incl.map  _widgets_8h__incl.md5  _widgets_8h_source.html  annotated.html  bug.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  functions_rela.html  (+105 more)
HW1/Part1/: .travis.yml  CMakeLists.txt  lib.cpp  main.cpp
HW1/Part2/: CMakeLists.txt  Tester.cpp  Tester.h  conanfile.txt  ip_filter.cpp  ip_filter.h  ip_filter.tst  test_output.cpp
HW2/: CMakeLists.txt
HW2/src/: List.h  allocator.h  main.cpp  pch.h  profile.h  test.cpp  test_executer.cpp
HW3/: CMakeLists.txt
HW3/doc/: doxyfile
HW3/src/: main.cpp  out.txt  pch.h  print_meta_ip.cpp
HW3/test/: print_test.cpp
HW4/: CMakeLists.txt
HW4/dependence/glad/include/glad/: glad.h
HW4/dependence/glad/src/: glad.c
HW4/doc/: Doxyfile
HW4/shaders/: FragmentShader.glsl  VertexShader.glsl
HW4/src/: Primitives.cpp  Primitives.h  Shader.cpp  Shader.h  Widgets.cpp  Widgets.h  main.cpp
HW5/: CMakeLists.txt
HW5/src/: Matrix.h  main.cpp
HW5/test/: tests.cpp
HW6/: CMakeLists.txt
HW6/src/: Bulk.cpp  Bulk.h  main.cpp
HW6/src/BulkModel/: BulkReader.cpp  BulkReader.h
HW6/src/TimeManager/: TimeManager.h
HW6/test/: tests.cpp
HW7/: CMakeLists.txt
HW7/src/: Command_interpreter.cpp  Command_interpreter.h  Directory_Compositer.cpp  Directory_Compositer.h  Files_Collection.cpp  Files_Collection.h  Glob_Parser.cpp  Glob_Parser.h  main.cpp
HW7/test/: bayan_tests.cpp  glob_test.cpp
HW8/: CMakeLists.txt
HW8/async_library/: CMakeLists.txt  async.cpp  async.h  main.cpp
HW8/src/: Bulk.cpp  Bulk.h  main.cpp
HW8/src/BulkController/: Controller.cpp  Controller.h
HW8/src/BulkModel/: BulkReader.cpp  BulkReader.h
HW8/src/BulkView/: OutputManager.cpp  OutputManager.h
HW8/src/TimeManager/: TimeManager.cpp
HW8/test/: tests.cpp
TIMUS/: ex2001.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_1.js  files_2.js  files_3.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+30 more)
